--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@ build
 # auto-import.
 .idea/artifacts
 #.idea/compiler.xml
-#.idea/jarRepositories.xml
+.idea/jarRepositories.xml
 # .idea/modules.xml
 # .idea/*.iml
 # .idea/modules
