--- a/.gitignore
+++ b/.gitignore
@@ -31,13 +31,17 @@ build
 # since they will be recreated, and may cause churn.  Uncomment if using
 # auto-import.
 .idea/artifacts
-#.idea/compiler.xml
 .idea/jarRepositories.xml
+.idea/*.iml
+*.iml
+*.ipr
+
+######## breaks teamcity inspections build
+#.idea/compiler.xml
 # .idea/modules.xml
-# .idea/*.iml
 # .idea/modules
-# *.iml
-# *.ipr
+
+
 
 # Mongo Explorer plugin
 .idea/**/mongoSettings.xml
