--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,28 @@
 .idea/**/uiDesigner.xml
 .idea/**/dbnavigator.xml
 
+# Gradle:
+#.idea/gradle.xml
+.idea/libraries
+
 # Gradle
 #.idea/**/gradle.xml
+.idea/**/libraries
+
+# Gradle and Maven with auto-import
+# When using Gradle or Maven with auto-import, you should exclude module files,
+# since they will be recreated, and may cause churn.  Uncomment if using
+# auto-import.
+ .idea/artifacts
+# .idea/compiler.xml
+ .idea/jarRepositories.xml
+# .idea/modules.xml
+# .idea/*.iml
+# .idea/modules
+# *.iml
+ *.ipr
+
+# Gradle
 .idea/**/libraries
 .gradle
 build
@@ -32,14 +52,15 @@ build
 # auto-import.
 .idea/artifacts
 .idea/jarRepositories.xml
-.idea/*.iml
-*.iml
+#.idea/*.iml
+#*.iml
 *.ipr
 
 ######## breaks teamcity inspections build
 #.idea/compiler.xml
-# .idea/modules.xml
-# .idea/modules
+#.idea/modules
+#.idea/modules.xml
+#.idea/gradle.xml
 
 
 
