--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@
 .idea/libraries
 
 # Gradle
-#.idea/**/gradle.xml
+.idea/**/gradle.xml
 .idea/**/libraries
 
 # Gradle and Maven with auto-import
@@ -33,12 +33,12 @@
 # since they will be recreated, and may cause churn.  Uncomment if using
 # auto-import.
  .idea/artifacts
-# .idea/compiler.xml
+ .idea/compiler.xml
  .idea/jarRepositories.xml
-# .idea/modules.xml
-# .idea/*.iml
-# .idea/modules
-# *.iml
+ .idea/modules.xml
+ .idea/*.iml
+ .idea/modules
+ *.iml
  *.ipr
 
 # Gradle
